functional theme changer menu

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/chessFonts.css">
-    <link rel="stylesheet" href="assets/css/themes/default/theme.css">
+    <link rel="stylesheet" href="assets/css/themes/default/theme.css" id="themeLink">
     <link rel="stylesheet" href="assets/css/screen.css">
 
     <!-- JS -->
