functional theme form that saves & loads state

--- a/client/index.html
+++ b/client/index.html
@@ -77,6 +77,9 @@
                     <input type="radio" id="monochrome" name="theme">
                     <label for="monochrome">Monochrome</label>
                 </fieldset>
+                <fieldset>
+                     
+                </fieldset>
             </form>
         </article>
     </div>
