Functional Chess Font Settings Form

--- a/client/index.html
+++ b/client/index.html
@@ -78,7 +78,19 @@
                     <label for="monochrome">Monochrome</label>
                 </fieldset>
                 <fieldset>
-                     
+                     <legend>Chess Pieces</legend>
+                     <input type="radio" id="standard" name="chess-pieces" checked>
+                     <label for="standard">Standard<span class="standard">p l<legend></legend></span></label>
+                     <input type="radio" id="adventurer" name="chess-pieces">
+                     <label for="adventurer">Adventurer<span class="adventurer">p l</span></label>
+                     <input type="radio" id="mark" name="chess-pieces">
+                     <label for="mark">Mark<span class="mark">p l</span></label>
+                     <input type="radio" id="condal" name="chess-pieces">
+                     <label for="condal">Condal<span class="condal">p l</span></label>
+                     <input type="radio" id="kingdom" name="chess-pieces">
+                     <label for="kingdom">Kingdom<span class="kingdom">p l</span></label>
+                     <input type="radio" id="magnetic" name="chess-pieces">
+                     <label for="magnetic">Magnetic<span class="magnetic">p l</span></label>
                 </fieldset>
             </form>
         </article>
